add_library(orbment-plugin-configuration SHARED configuration.c)
target_link_libraries(orbment-plugin-configuration ${ORBMENT_LIBRARIES})
set_target_properties(orbment-plugin-configuration PROPERTIES PREFIX "")
install(TARGETS orbment-plugin-configuration DESTINATION ${ORBMENT_PLUGINS_PATH})

add_definitions(${INIHCK_DEFINITIONS})
include_directories(${INIHCK_INCLUDE_DIRS})
add_library(orbment-plugin-configuration-ini SHARED configuration-ini.c)
target_link_libraries(orbment-plugin-configuration-ini ${ORBMENT_LIBRARIES} ${INIHCK_LIBRARIES})
set_target_properties(orbment-plugin-configuration-ini PROPERTIES PREFIX "")
install(TARGETS orbment-plugin-configuration-ini DESTINATION ${ORBMENT_PLUGINS_PATH})
