set(CMAKE_THREAD_PREFER_PTHREAD 1)
find_package(Threads)
if (THREADS_FOUND)
   if ("${CMAKE_THREAD_LIBS_INIT}" STREQUAL "")
      find_library(THREAD_LIB NAMES pthread)
   else ()
      set(THREAD_LIB ${CMAKE_THREAD_LIBS_INIT})
   endif ()
else ()
   message(FATAL_ERROR "No threads library was found")
endif (THREADS_FOUND)

add_library(orbment-plugin-core-screenshot SHARED core-screenshot.c)
target_link_libraries(orbment-plugin-core-screenshot ${CMAKE_THREAD_LIBS_INIT} chck_orbment )
set_target_properties(orbment-plugin-core-screenshot PROPERTIES PREFIX "")
install(TARGETS orbment-plugin-core-screenshot DESTINATION ${ORBMENT_PLUGINS_PATH})
